--- a/05_Salary_Prediction_Using_Decision_Tree_Regression.ipynb
+++ b/05_Salary_Prediction_Using_Decision_Tree_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1QjmFTpbG8Imj_icwQvfdWmtFvr5zbTrJ",
-      "authorship_tag": "ABX9TyPF38quYN4skEZMKKugt9R3",
+      "authorship_tag": "ABX9TyP9j2J1xXmFSs5hwAbMeyU3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -348,7 +348,7 @@
       },
       "source": [
         "#**06. Conclusion**\n",
-        "The candidate salary expectations could be ou of the the range of the company payroll."
+        "The candidate salary expectations could be out of the the range of the company payroll."
       ]
     }
   ]
