--- a/05_Salary_Prediction_Using_Decision_Tree_Regression.ipynb
+++ b/05_Salary_Prediction_Using_Decision_Tree_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1QjmFTpbG8Imj_icwQvfdWmtFvr5zbTrJ",
-      "authorship_tag": "ABX9TyP9j2J1xXmFSs5hwAbMeyU3",
+      "authorship_tag": "ABX9TyO81ZBUTlnDKEPqM/X0HVmt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "Y= dataset.iloc[:,2].values\n",
         "dataset"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +231,7 @@
         "regressor= DecisionTreeRegressor(random_state=0)\n",
         "regressor.fit(X,Y)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
         "plt.legend(loc='lower right')\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -325,7 +325,7 @@
       "source": [
         "regressor.predict([[6.5]])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
       },
       "source": [
         "#**06. Conclusion**\n",
-        "The candidate salary expectations could be out of the the range of the company payroll."
+        "The candidate salary expectations could be out of the range of the company payroll."
       ]
     }
   ]
